fixed spacing issue

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -29,6 +29,7 @@ h4 {
 }
 
 .head {
+   margin: auto;
    font-size: 20px;
    font-weight: bold;
 }
@@ -52,6 +53,10 @@ br {
    margin-top: 10px; /* change this to whatever height you want it */
 }
 
+p {
+   margin: auto;
+}
+
 p.head {
    font-size: 20px;
    text-decoration: underline;
@@ -65,10 +70,6 @@ b {
 
 .cert, .volunteer {
    margin: 10px;
-}
-
-.Certifications, .VolunteerWork {
-   display: block;
 }
 
 
